# Armas

./: .gitignore  Cargo.toml  README.md  clippy.toml
crates/armas/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
crates/armas-animated/: Cargo.toml  README.md
crates/armas-animated/src/: flip_words.rs  glowing_border.rs  lib.rs  scramble_text.rs  scrolling_banner.rs  typewriter.rs
crates/armas-animated/src/backgrounds/: aurora.rs  dot_pattern.rs  grid_pattern.rs  meteor.rs  mod.rs  retro_grid.rs  sparkles.rs  spotlight.rs
crates/armas-animated/src/effects/: gradient_text.rs  moving_border.rs
crates/armas-audio/: Cargo.toml  README.md  build.rs
crates/armas-audio/src/: automation_canvas.rs  automation_curve_selector.rs  automation_editor.rs  automation_point_handle.rs  automation_value_display.rs  drum_sequencer.rs  fader.rs  icons.rs  knob.rs  lib.rs  loop_region_marker.rs  marker.rs  meter.rs  midi_controller.rs  midi_pad.rs  mixer_strip.rs  mod_wheel.rs  mpe_keyboard.rs  piano.rs  piano_roll.rs  piano_roll_grid.rs  playhead.rs  punch_marker.rs  sampler_envelope_section.rs  sampler_playback_params.rs  sampler_zone.rs  selection_range.rs  slot.rs  snap_grid.rs  step_sequencer.rs  tempo_marker.rs  time_ruler.rs  time_signature_marker.rs  timeline.rs  timeline_marker.rs  timeline_region.rs  timeline_track.rs  track_header.rs  transport.rs  waveform_display.rs  (+4 more)
crates/armas-audio/tests/: fader_tests.rs  knob_tests.rs  meter_tests.rs  mixer_strip_tests.rs  transport_tests.rs  xy_pad_tests.rs
crates/armas-basic/: Cargo.toml  LICENSE-MIT  README.md  build.rs
crates/armas-basic/fonts/: README.md
crates/armas-basic/src/: color.rs  lib.rs  prelude.rs  theme.rs
crates/armas-basic/src/animation/: easing.rs  interpolate.rs  mod.rs  momentum.rs  staggered.rs  velocity_drag.rs
crates/armas-basic/src/ext/: context.rs  mod.rs  painter.rs
crates/armas-basic/src/fonts/: mod.rs
crates/armas-basic/src/icon/: mod.rs
crates/armas-basic/src/layout/: aspect_ratio.rs  bento_grid.rs  mod.rs  table.rs
crates/armas-basic/tests/: breadcrumbs_tests.rs  button_tests.rs  command_tests.rs  datepicker_tests.rs  dialog_tests.rs  drawer_tests.rs  input_tests.rs  menu_tests.rs  pagination_tests.rs  select_tests.rs  sheet_tests.rs  sidebar_tests.rs  slider_tests.rs  tabs_tests.rs  toggle_tests.rs  tree_view_tests.rs
crates/armas-icon/: Cargo.toml  README.md
crates/armas-icon/src/: build.rs  lib.rs  runtime.rs  tessellate.rs
crates/armas-showcase-macros/: Cargo.toml
crates/armas-showcase-macros/src/: codegen.rs  lib.rs  parser.rs
crates/armas-web/: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  build_web.sh  index.html  serve.sh
crates/armas-web/content/: animations.md  buttons.md  cards.md  data_display.md  getting_started.md  layout.md  loading.md  navigation.md
crates/armas-web/content/animated/: flip_words.md  moving_border.md  scramble_text.md  scrolling_banner.md  typewriter.md
crates/armas-web/content/audio/: drum_sequencer.md  fader.md  knob.md  meter.md  midi_controller.md  midi_pad.md  mixer_strip.md  mod_wheel.md  mpe_keyboard.md  piano.md  piano_roll.md  playback_params.md  sampler.md  selection_range.md  step_sequencer.md  tempo_marker.md  time_ruler.md  timeline.md  timeline_track.md  transport.md  waveform_display.md  xy_pad.md  zoom_control.md
crates/armas-web/content/backgrounds/: aurora.md  dot_pattern.md  grid_pattern.md  meteor.md  retro_grid.md  sparkles.md
crates/armas-web/content/basic/: accordion.md  alert.md  avatar.md  badge.md  button_variants.md  buttons.md  date_picker.md  event_timeline.md  icon.md  icon_button.md  input.md  kbd.md  loading.md  progress.md  radio.md  range_slider.md  select.md  separator.md  slider.md  textarea.md  three_value_slider.md  toggle.md  tooltip.md
crates/armas-web/content/cards/: card.md  card_spotlight.md  card_stack.md  card_variants.md  floating_window.md  gradient_card.md  infinite_moving_cards.md  testimonial.md  text_reveal_card.md  tilt_card.md  wobble_card.md
crates/armas-web/content/components/: accordion.md  alert.md  avatar.md  badge.md  bento_grid.md  breadcrumbs.md  buttons.md  card_stack.md  cards.md  command_menu.md  date_picker.md  drawer.md  fader.md  feature_grid.md  floating_dock.md  floating_navbar.md  focus_cards.md  glass_panel.md  glowing_border.md  gradient_card.md  infinite_moving_cards.md  input.md  loading.md  menu.md  modal.md  navigation.md  popover.md  progress.md  routing_button.md  scramble_text.md  scrolling_banner.md  section_header.md  select.md  sidebar.md  slot.md  stepper.md  tabs.md  testimonial.md  tilt_card.md  timeline.md  (+3 more)
crates/armas-web/content/effects/: animated_beam.md  aurora.md  background_beams.md  dot_pattern.md  grid_pattern.md  lamp.md  meteor.md  retro_grid.md  sparkles.md  spotlight.md  vortex.md  wavy_background.md
crates/armas-web/src/: main.rs  markdown.rs  showcase_gen.rs  syntax.rs  url_utils.rs  web_icons.rs
crates/armas/examples/: accordion.rs  aceternity_buttons.rs  alert.rs  animation.rs  aurora.rs  automation_editor_demo.rs  avatar.rs  background_beams.rs  backgrounds.rs  backgrounds_complete.rs  badge.rs  bento_grid.rs  blur.rs  breadcrumbs.rs  button.rs  card.rs  cards.rs  date_picker.rs  dot_pattern.rs  drawer.rs  fader.rs  feature_grid.rs  flip_words.rs  focus_cards.rs  forms.rs  glass_panel.rs  glowing_border.rs  gradient_card.rs  gradient_showcase.rs  grid_test.rs  infinite_moving_cards.rs  lamp.rs  layout.rs  loading.rs  menu.rs  modal.rs  moving_border.rs  navigation.rs  pagination.rs  popover.rs  (+19 more)
crates/armas/src/: color.rs  lib.rs  painter_ext.rs  prelude.rs  theme.rs
crates/armas/src/animation/: mod.rs  (+4 more)
crates/armas/tests/: breadcrumbs_tests.rs  browser_tests.rs  button_tests.rs  command_tests.rs  datepicker_tests.rs  dialog_tests.rs  drawer_tests.rs  floating_navbar_tests.rs  input_tests.rs  menu_tests.rs  modal_tests.rs  pagination_tests.rs  routing_button_tests.rs  select_tests.rs  sheet_tests.rs  sidebar_tests.rs  slider_tests.rs  stepper_tests.rs  tabs_tests.rs  toggle_tests.rs  tree_view_tests.rs
(+450 files in other folders)
