[workspace]
resolver = "2"
members = [
    "crates/armas",
    "crates/armas-animated",
    "crates/armas-audio",
    "crates/armas-icon",
    "crates/armas-showcase-macros",
    "crates/armas-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PoHsuan Lai"]
license = "MIT"
repository = "https://github.com/PoHsuanLai/Armas"

[workspace.dependencies]
egui = "0.33"
eframe = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.clippy]
# Pedantic lints for high code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
doc_markdown = "warn"

module_name_repetitions = "allow"
similar_names = "allow"

cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"

[profile.release]
opt-level = 2

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
