[workspace]
resolver = "2"
members = [
    "crates/armas",
    "crates/armas-basic",
    "crates/armas-audio",
    "crates/armas-icon",
    "crates/armas-showcase-macros",
    "crates/armas-web",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["PoHsuan Lai"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Armas"
documentation = "https://pohsuanlai.github.io/Armas"

[workspace.dependencies]
egui = "0.33"
eframe = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.clippy]
# Pedantic lints for high code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow patterns common in UI/egui code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"

# UI structs often have many bool fields for state
struct_excessive_bools = "allow"
# egui drawing functions often need many parameters
too_many_arguments = "allow"
# Common in egui: &self where self isn't used (trait impls, future use)
unused_self = "allow"
# Unnecessary for UI code - immutable refs are fine as-is
needless_pass_by_ref_mut = "allow"
# f32::mul_add is less readable in UI layout math
suboptimal_flops = "allow"

[profile.release]
opt-level = 2

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
