[package]
name = "armas-animated"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Animated text and effect components for egui"
keywords = ["egui", "animation", "effects", "ui"]
categories = ["gui"]

[dependencies]
egui.workspace = true
armas = { version = "0.1.2", path = "../armas" }

[lints]
workspace = true
