[package]
name = "armas-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio UI components for egui - specialized widgets for audio production interfaces."
keywords = ["egui", "ui", "audio", "daw", "components"]
categories = ["gui", "multimedia::audio"]

[dependencies]
egui = "0.33"
egui-theme = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock", "wasmbind"] }
audio-automation = { git = "https://github.com/PoHsuanLai/audio-automation.git" }
armas = { path = "../armas" }
armas-icon = { path = "../armas-icon" }

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }

[build-dependencies]
usvg = "0.46"
lyon_tessellation = "1.0"

[lints]
workspace = true
