[package]
name = "armas-icon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Generic SVG-based icon system for egui"
keywords = ["egui", "icons", "svg", "ui"]
categories = ["gui"]

[features]
build = ["dep:usvg", "dep:lyon_tessellation"]

[dependencies]
egui.workspace = true
usvg = { version = "0.46", optional = true }
lyon_tessellation = { version = "1.0", optional = true }

[lints]
workspace = true
