[package]
name = "armas-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "armas_web"
path = "src/main.rs"

[dependencies]
armas = { path = "../armas" }
armas-showcase-macros = { path = "../armas-showcase-macros" }
eframe = { workspace = true, features = ["default", "wgpu"] }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = "0.11"
regex = "1.10"
fuzzy-matcher = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }

# For opening URLs on native platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.0"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
