[package]
name = "armas"
version = "0.1.0"
edition = "2021"
authors = ["PoHsuan Lai"]
description = "ALIG - A component library for egui with Material Design inspired theming and reusable UI components."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/armas"
keywords = ["egui", "ui", "theme", "components", "material-design"]
categories = ["gui"]

[dependencies]
egui = "0.33"
egui-theme = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
eframe = "0.33"
