[package]
name = "armas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "UI component library for egui following shadcn/ui design patterns"
keywords = ["egui", "ui", "theme", "components", "material-design"]
categories = ["gui"]

[features]
default = ["basic", "icon"]
basic = ["dep:armas-basic"]
audio = ["dep:armas-audio", "basic"]
icon = ["dep:armas-icon"]

[dependencies]
armas-basic = { version = "0.1.2", path = "../armas-basic", optional = true }
armas-audio = { version = "0.1.2", path = "../armas-audio", optional = true }
armas-icon = { version = "0.1.2", path = "../armas-icon", optional = true }

[lints]
workspace = true
